# serverless-python311-template

./: .env.template  .gitignore  .slsignore  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/workflows/: auto-assign-pr-author.yml  check-vulnerabilities.yml  test.yml
env/: local.yml
src/v1/: __init__.py
src/v1/config/: settings.py
src/v1/handlers/: app.py
src/v1/middlewares/: common.py
src/v1/schemas/: api_server_info.py  common.py  errors.py
tests/test_v1/test_config/: test_settings.py
